--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://ykuptsov:fIasyeN9m54VZvfH@cluster0.vpy0cg0.mongodb.net/my-portfolio-users?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://gumusrahmi1783:123456@ask.w6nfnqc.mongodb.net/
 JWT_SECRET=your_jwt_secret
-EMAIL_USER=ykuptsov@csinow.edu
+EMAIL_USER=XXX
 EMAIL_PASS=XXX
